# testQT

./: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  main.cpp  testQT
.cmake/api/v1/reply/: cache-v2-af7261eee36893ca40d7.json  cmakeFiles-v1-05ef57fc9b0274072db9.json  codemodel-v2-890181ef8b4c7199a53e.json  index-2024-02-01T13-05-17-0035.json  target-testQT-Debug-dd60996fe7e65f04dc51.json  target-testQT_autogen-Debug-e8d8fdca4c53767fd454.json  target-testQT_autogen_timestamp_deps-Debug-40106eed8b0d48fdab0b.json
.qt/: QtDeploySupport.cmake
testQT_autogen/: deps
